# mdbook-open-on-gh

./: Cargo.toml
src/: lib.rs
