[package]
name = "mdbook-open-on-git-xx"
version = "0.0.1"
authors = ["gameendman <gameendman99@gmail.com>","Jan-Erik Rediger <janerik@fnordig.de>"]
description = "mdbook preprocessor to add a open-on-git-xx link on every page, which is a fork of mdbook-open-on-gh"
license = "MPL-2.0"
homepage = "https://github.com/gameendman/mdbook-open-on-gh"
repository = "https://github.com/gameendman/mdbook-open-on-gh"
edition = "2018"

[dependencies]
mdbook = "0.3"
env_logger = "0.6"
log = "0.4"
clap = "2.33"
serde_json = "1.0"
toml = "0.5.6"
